Added exclamation points

--- a/Official_Blog/HTML/blog-post.html
+++ b/Official_Blog/HTML/blog-post.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Salma's First Blog</title>
+    <title>Salma's First Blogs</title>
     <link href="/CSS/blog-post-css/blog-post.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <!--montserrat-->
