--- a/Official_Blog/HTML/blog-website.html
+++ b/Official_Blog/HTML/blog-website.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
-    <title>Salma's Blog Post</title>
+    <title>Salma's Blog Post!</title>
     <meta name="author" content="Salma Osman">
     <link rel="stylesheet" type="text/css" href="/CSS/blog-website-css/blog-website.css">
     <link href="blog-post.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 <body>
     <div id="top-header">
         <header>
-            Salma's Recipes
+            Salma's Recipes!
         </header>
         <ul>
             <li><a href="blog-website.html">Home</a></li>
