--- a/Official_Blog/HTML/blog-post.html
+++ b/Official_Blog/HTML/blog-post.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Salma's First Blogs</title>
-    <link href="/CSS/blog-post-css/blog-post.css" rel="stylesheet">
+    <link href="../CSS/blog-post-css/blog-post.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <!--montserrat-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -19,7 +19,7 @@
         <header>
             <div id="container-1">
                 <div class="button">
-                    <a href="blog-website.html">
+                    <a href="../index.html">
                         <button>Back to Blog</button>
                     </a>
                 </div>
@@ -54,9 +54,6 @@
                     anim id est laborum.</p>
             </div>
             <div id="container-3">
-                <!-- <figure id="picture-1">
-                <img src="quejo.jpg" alt="food-photo" class="img">
-            </figure> -->
             </div>
             <div id="container-4">
                 <p class="text" id="underpic">
@@ -210,19 +207,19 @@
     </article>
     <footer class="features">
         <figure>
-            <img src="/IMAGES/facebook.png" alt="facebook">
+            <img src="../IMAGES/facebook.png" alt="facebook">
             <figcaption>
                 <a href="https://www.facebook.com/"> facebook</a>
             </figcaption>
         </figure>
         <figure>
-            <img src="/IMAGES/twitter.png" alt="twitter">
+            <img src="../IMAGES/twitter.png" alt="twitter">
             <figcaption>
                 <a href="https://www.twitter.com/"> twitter</a>
             </figcaption>
         </figure>
         <figure>
-            <img src="/IMAGES/linkedin.webp" alt="linkedin">
+            <img src="../IMAGES/linkedin.webp" alt="linkedin">
             <figcaption>
                 <a href="https://www.linkedin.com/"> linkedin</a>
             </figcaption>
