--- a/Official_Blog/HTML/norecipe.html
+++ b/Official_Blog/HTML/norecipe.html
@@ -4,12 +4,12 @@
     <title>No Recipe Available</title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/CSS/norecipe.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/norecipe.css">
 </head>
 
 <body>
     <div id="button">
-        <a href="blog-website.html">
+        <a href="../index.html">
             <button>Back to Blog</button>
         </a>
     </div>
