--- a/Official_Blog/index.html
+++ b/Official_Blog/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <title>Salma's Blog Post!</title>
     <meta name="author" content="Salma Osman">
-    <link rel="stylesheet" type="text/css" href="/CSS/blog-website-css/blog-website.css">
-    <link href="blog-post.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="CSS/blog-website-css/blog-website.css">
+    <link href="CSS/blog-post-css/blog-post.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <!--montserrat-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -22,12 +22,11 @@
             Salma's Recipes!
         </header>
         <ul>
-            <li><a href="blog-website.html">Home</a></li>
-            <li><a href="blog-post.html">First Recipe</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="HTML/blog-post.html">First Recipe</a></li>
         </ul>
         <div id="intro">
             <div id="crop">
-                <!-- <img src="contact-photo.jpg" alt="Contact photo"> -->
             </div>
             <!--author picture-->
             <div id="author">
@@ -39,7 +38,7 @@
     <br>
     <div class="cards">
         <div class="card">
-            <img src="/IMAGES/pao.jpeg" alt="pao" class="card-image">
+            <img src="IMAGES/pao.jpeg" alt="pao" class="card-image">
             <div class="card-content">
                 <p> Pao de Quejo
 
@@ -51,12 +50,12 @@
                     5 stars
                 </div>
                 <div class="view-article">
-                    <a href="blog-post.html" class="card-link">Click Here</a>
+                    <a href="HTML/blog-post.html" class="card-link">Click Here</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img src="/IMAGES/chicken.jpg" alt="pao" class="card-image">
+            <img src="IMAGES/chicken.jpg" alt="adobo chicken" class="card-image">
             <div class="card-content">
                 <p> Chicken Adobo
 
@@ -68,12 +67,12 @@
                     4 stars
                 </div>
                 <div class="view-article">
-                    <a href="norecipe.html" class="card-link">View Article</a>
+                    <a href="HTML/norecipe.html" class="card-link">View Article</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img src="/IMAGES/kishk.jpg" alt="pao" class="card-image">
+            <img src="IMAGES/kishk.jpg" alt="kishk" class="card-image">
             <div class="card-content">
                 <p> Kishk
 
@@ -85,12 +84,12 @@
                     4.5 stars
                 </div>
                 <div class="view-article">
-                    <a href="norecipe.html" class="card-link">View Article</a>
+                    <a href="HTML/norecipe.html" class="card-link">View Article</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img src="/IMAGES/Pineapple.jpg" alt="pao" class="card-image">
+            <img src="IMAGES/Pineapple.jpg" alt="pineapple chicken fried rice" class="card-image">
             <div class="card-content">
                 <p> Pineapple Fried Rice
 
@@ -102,12 +101,12 @@
                     3 stars
                 </div>
                 <div class="view-article">
-                    <a href="norecipe.html" class="card-link">View Article</a>
+                    <a href="HTML/norecipe.html" class="card-link">View Article</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img src="/IMAGES/negresco.jpg" alt="pao" class="card-image">
+            <img src="IMAGES/negresco.jpg" alt="negresco" class="card-image">
             <div class="card-content">
                 <p> Negresco
 
@@ -119,12 +118,12 @@
                     5 stars
                 </div>
                 <div class="view-article">
-                    <a href="norecipe.html" class="card-link">View Article</a>
+                    <a href="HTML/norecipe.html" class="card-link">View Article</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img src="/IMAGES/chickenparm.jpg" alt="pao" class="card-image">
+            <img src="IMAGES/chickenparm.jpg" alt="chickenparm" class="card-image">
             <div class="card-content">
                 <p> Chicken Parmesan
 
@@ -136,12 +135,12 @@
                     4.5 stars
                 </div>
                 <div class="view-article">
-                    <a href="norecipe.html" class="card-link">View Article</a>
+                    <a href="HTML/norecipe.html" class="card-link">View Article</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img src="/IMAGES/guac.jpg" alt="pao" class="card-image">
+            <img src="IMAGES/guac.jpg" alt="guac" class="card-image">
             <div class="card-content">
                 <p> Guacamole
 
@@ -153,12 +152,12 @@
                     5 stars
                 </div>
                 <div class="view-article">
-                    <a href="norecipe.html" class="card-link">View Article</a>
+                    <a href="HTML/norecipe.html" class="card-link">View Article</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img src="/IMAGES/Butter.jpg" alt="pao" class="card-image">
+            <img src="IMAGES/Butter.jpg" alt="butter chicken" class="card-image">
             <div class="card-content">
                 <p> Butter Chicken
 
@@ -170,12 +169,12 @@
                     4 stars
                 </div>
                 <div class="view-article">
-                    <a href="norecipe.html" class="card-link">View Article</a>
+                    <a href="HTML/norecipe.html" class="card-link">View Article</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <img src="/IMAGES/kabob.jpg" alt="pao" class="card-image">
+            <img src="IMAGES/kabob.jpg" alt="kabob" class="card-image">
             <div class="card-content">
                 <p> Grilled Kabob
 
@@ -187,7 +186,7 @@
                     5 stars
                 </div>
                 <div class="view-article">
-                    <a href="norecipe.html" class="card-link">View Article</a>
+                    <a href="HTML/norecipe.html" class="card-link">View Article</a>
                 </div>
             </div>
         </div>
