changing ID to class in div

--- a/Official_Blog/index.html
+++ b/Official_Blog/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <title>Salma's Blog Post!</title>
     <meta name="author" content="Salma Osman">
-    <link rel="stylesheet" type="text/css" href="CSS/blog-website-css/blog-website.css">
+    <link rel="stylesheet" href="CSS/blog-website-css/blog-website.css">
     <link href="CSS/blog-post-css/blog-post.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
     <!--montserrat-->
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div id="top-header">
+    <div class="top-header">
         <header>
             Salma's Recipes!
         </header>
@@ -25,13 +25,13 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="HTML/blog-post.html">First Recipe</a></li>
         </ul>
-        <div id="intro">
-            <div id="crop">
+        <div class="intro">
+            <div class="crop">
             </div>
             <!--author picture-->
-            <div id="author">
-                <div id="author-name">Salma Osman</div>
-                <div id="author-description">Professional Chef</div>
+            <div class="author">
+                <div class="author-name">Salma Osman</div>
+                <div class="author-description">Professional Chef</div>
             </div>
         </div>
     </div>
