--- a/Official_Blog/HTML/blog-post.html
+++ b/Official_Blog/HTML/blog-post.html
@@ -17,26 +17,26 @@
 <body>
     <article>
         <header>
-            <div id="container-1">
+            <div class="container-1">
                 <div class="button">
                     <a href="../index.html">
                         <button>Back to Blog</button>
                     </a>
                 </div>
                 <h1 id="blog-title" class="text">Pao De Quejo</h1>
-                <div id="intro">
-                    <div id="crop">
+                <div class="intro">
+                    <div class="crop">
                     </div>
                     <!--author picture-->
-                    <div id="author">
-                        <div id="author-name">Salma Osman</div>
-                        <div id="author-description">Professional Chef</div>
+                    <div class="author">
+                        <div class="author-name">Salma Osman</div>
+                        <div class="author-description">Professional Chef</div>
                     </div>
                 </div>
             </div>
         </header>
         <section>
-            <div id="container-2">
+            <div class="container-2">
                 </br>
                 <p id="intro-p" class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor
@@ -52,9 +52,9 @@
                     mollit
                     anim id est laborum.</p>
             </div>
-            <div id="container-3">
+            <div class="container-3">
             </div>
-            <div id="container-4">
+            <div class="container-4">
                 <p class="text" id="underpic">
                     Sollicitudin nibh sit amet
                     commodo nulla facilisi nullam vehicula. Scelerisque purus semper eget duis at tellus. Magna ac
@@ -72,7 +72,7 @@
                     et
                 </p>
             </div>
-            <div id=container-5>
+            <div class=container-5>
                 <p class="text">
                     Porta non pulvinar neque laoreet suspendisse interdum consectetur libero id. Eget egestas purus
                     viverra
@@ -88,9 +88,9 @@
                     pellentesque
                     sit. </p>
             </div>
-            <div id="container-6">
+            <div class="container-6">
             </div>
-            <div id="container-7">
+            <div class="container-7">
                 <h3 name="recipe"> Ingredients</h3>
                 <ul class="text">
                     <li class="text">3 1/3 cup tapioca flour</li>
@@ -102,7 +102,7 @@
                     <li class="text">3 large eggs</li>
                 </ul>
             </div>
-            <div id="container-9">
+            <div class="container-9">
                 <p class="text">
                     Mattis pellentesque id nibh tortor id aliquet. Orci nulla pellentesque dignissim enim sit amet
                     venenatis
@@ -122,7 +122,7 @@
                     pellentesque pulvinar pellentesque habitant.</p>
                 <h4 class="bold">Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt</h4>
             </div>
-            <div id="container-10">
+            <div class="container-10">
                 <ol class="text">
                     <li class="text">Preheat oven to 400 Farenheit</li>
                     <li class="text">Put tapioca flour in a large bowl</li>
@@ -143,7 +143,7 @@
                     <li class="text">Serve fresh</li>
                 </ol>
             </div>
-            <div id="container-11">
+            <div class="container-11">
                 <p class="text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et
@@ -157,7 +157,7 @@
                     mollit
                     anim id est laborum. </p>
             </div>
-            <div id="container-12">
+            <div class="container-12">
                 <p class="text">
                     Varius duis at consectetur lorem donec. Elementum facilisis leo vel fringilla est ullamcorper.
                     Tortor
@@ -176,11 +176,11 @@
                     interdum
                     consectetur. Suscipit adipiscing bibendum est ultricies integer quis auctor elit sed. </p>
             </div>
-            <div id="container-13">
-                <p class="text" id="quote">
-                    "Most amazing dish I've ever tried! Perfect for any family gathering." -Karen Smith</p>
+            <div class="container-13">
+                <q class="text" id="quote">
+                    Most amazing dish I've ever tried! Perfect for any family gathering.</q>
             </div>
-            <div id="container-14">
+            <div class="container-14">
                 <p class="text" id="inline-p">
                     Risus commodo viverra maecenas accumsan lacus vel facilisis volutpat. Pharetra et ultrices neque
                     ornare.
@@ -199,7 +199,7 @@
                     ut
                     venenatis tellus. Lobortis scelerisque fermentum dui faucibus.</p>
             </div>
-            <div id="container-8">
+            <div class="container-8">
             </div>
             </br>
         </section>
