removing type in link & id to class change button

--- a/Official_Blog/HTML/norecipe.html
+++ b/Official_Blog/HTML/norecipe.html
@@ -4,17 +4,17 @@
     <title>No Recipe Available</title>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../CSS/norecipe.css">
+    <link rel="stylesheet" href="../CSS/norecipe.css">
 </head>
 
 <body>
-    <div id="button">
+    <div class="button">
         <a href="../index.html">
             <button>Back to Blog</button>
         </a>
     </div>
     <h1>No Recipe Available</h1>
-    <div id="centered-button">
+    <div class="centered-button">
         <a href="blog-post.html">Click to go to Pao de Quejo Recipe
         </a>
     </div>
